--- a/meat-grinder/index.html
+++ b/meat-grinder/index.html
@@ -1,20 +1,26 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<!DOCTYPE html>
+<html lang="en">
 
-	<head>
+  <head>
 
-		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="favicon.ico">
 
-		<title>MeatGrinder: GURPS Hit Calculator</title>
+    <title>MeatGrinder: GURPS Hit Calculator</title>
 
-		<meta name="author" content="Alex Safatli and Christian Blouin" />
-		<meta name="description" content="GURPS Hit Location Calculator and Notes" />
+    <meta name="author" content="Alexander Safatli and Christian Blouin" />
+    <meta name="description" content="Hit Locator for the GURPS Roleplaying System" />
 
- 		<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
- 		<link href="css/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width:480px)" />
-		<link href="css/mobile.css" rel="stylesheet" type="text/css" media="handheld" />
+    <!-- Main Stylesheet -->
+    <link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/mobile.css" rel="stylesheet" type="text/css" media="only screen and (max-device-width:480px)" />
+    <link href="css/mobile.css" rel="stylesheet" type="text/css" media="handheld" />
+    <!-- Font-Awesome -->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
 
-	</head>
+  </head>
 
 	<body>
 	
