Remove some content from footer.

--- a/meat-grinder/index.html
+++ b/meat-grinder/index.html
@@ -214,7 +214,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          Website created using <a class="red-text text-lighten-3" href="http://materializecss.com/">Materialize</a> framework. <a class="red-text text-lighten-3" href="http://www.sjgames.com/gurps/">GURPS</a> is a trademark of Steve Jackson Games, and its rules and art are copyrighted by Steve Jackson Games.
+          Website created using <a class="red-text text-lighten-3" href="http://materializecss.com/">Materialize</a> framework.
         </div>
         </div>
       </div>
